[package]
name = "portal"
version = "0.1.0"
edition = "2021"


[build-dependencies]
chrono = "0.4"
hostname = "0.3"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rustls-pemfile = "2.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

tokio-rustls="0.26"
bytes = "1.5"
rcgen = "0.12"
futures = "0.3"
quinn = "0.11"
tracing = "0.1"
rustls-pki-types="1"
x509-parser = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lazy_static = "1.5.0"
tokio-tree-context = "0.1.6"
rand = "0.9.2"