[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[[bin]]
name="test"
path="src/test.rs"

[build-dependencies]
chrono = "0.4"
hostname = "0.3"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rustls-pemfile = "2.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

tokio-rustls="0.26"
bytes = "1.5"
rcgen = "0.12"
futures = "0.3"
quinn = "0.11"
tracing = "0.1"
rustls-pki-types="1"
x509-parser = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lazy_static = "1.5.0"
tokio-tree-context = "0.1.6"
rand = "0.9.2"
humansize = "2.1.3"
short-uuid = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hcl-rs = "0.19.4"
ipnet = "2.10"
regex = "1.10"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]